Add file upload resource. Need to implement file upload for avatar

--- a/src/main/webapp/i18n/vi/settings.json
+++ b/src/main/webapp/i18n/vi/settings.json
@@ -2,6 +2,7 @@
     "settings": {
         "title": "Cài đặt người dùng của [<b>{{username}}</b>]",
         "form": {
+            "image": "Ảnh đại diện",
             "firstname": "Tên",
             "firstname.placeholder": "Nhập tên của bạn",
             "lastname": "Họ",
