--- a/src/main/webapp/i18n/en/settings.json
+++ b/src/main/webapp/i18n/en/settings.json
@@ -2,6 +2,7 @@
     "settings": {
         "title": "User settings for [<b>{{username}}</b>]",
         "form": {
+            "image": "Avatar Image",
             "firstname": "First Name",
             "firstname.placeholder": "Your first name",
             "lastname": "Last Name",
